--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /part08-Part08_05.TodoList/target/
 /part08-Part08_06.Nicknames/target/
 /part08-Part08_07.Abbreviations/target/
+/part08-Part08_08.PrintMeMyHashmap/target/
