--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /part09-Part09_08.MapAsAMethodParameter/target/
 /part09-Part09_09.SetAsMethodParameter/target/
 /part09-Part09_10.OnlineShop/target/
+/part09-Part09_11.Herds/target/
