--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /part10-Part10_02.AverageOfSelectedNumbers/target/
 /part10-Part10_03.PositiveNumbers/target/
 /part10-Part10_04.Divisible/target/
+/part10-Part10_05.PrintingUserInput/target/
