--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@
 /part10-Part10_07.UniqueLastNames/target/
 /part10-Part10_09.ReadingFilesPerLine/target/
 /part10-Part10_10.BooksFromFile/target/
+/part10-Part10_11.WageOrder/target/
